increase content margin slightly, to avoid too close to mobile screen

--- a/css/blog.css
+++ b/css/blog.css
@@ -113,7 +113,7 @@ h1.archive-year {
 }
 
 #content {
-   margin: 0.8em;
+   margin: 1.0em;
 }
 
 #footer {
